style/modules/_sidebar.scss
// main: ../main.scss

.side,
.side * {
	z-index: 1000;
}

.res-nightmode .side,
.side {
	background-color: transparent !important;
}

.res-nightmode .side::before { background-position: 0 -59px; }

.side {
	position: relative;

	@if ($header-large == true) {
		top: 297px;
	} @else {
		top: 223px;
	}

	width: 0;
	margin: 0;
	padding-top: 85px;

	#ad_sponsorship,
	#ad_main {
		box-sizing: content-box; // stupid ad widths
		width: 302px; // to compensate for box-sizing change
		padding: 16px 14px !important; // to compensate for box-sizing change
	}

	// first card (containing search and submit)
	.spacer {
		width: 330px;
		margin: 0 0 15px;

		&:first-of-type {
			position: relative;
			top: -85px;
		}
	}

	// kebab menu
	&::before {
    position: fixed;
    top: 215px;
    right: 1.5em;
    display: block;
    height: 36px;
    width: 36px;
    content: "";
    background-position: -158px -23px;
		@include transition-default;
	}

	&:hover {

		.spacer { @include transform(translateX(-351px)); }

		// make kebab disappear on hover
		&:before { opacity: 0; }
	}

	.spacer:first-of-type,
	#ad_sponsorship,
	.titlebox,
	#moderation_tools,
	#ad_main,
	.sidecontentbox {
		font-size: 100%;
	}

	// sponsorship box & advertisement
	#ad_sponsorship {
		position: relative;
		top: -84px;
	}

	// hide create subreddit button and account activity div
	.sidebox.create,
	.account-activity-box {
		display: none;
	}
}

// login form
@import "sidebar/login";

// search
@import "sidebar/search";

// submit buttons
@import "sidebar/submit";

// titlebox
@import "sidebar/titlebox";

// sidecontentbox
@import "sidebar/sidecontentbox";

@media (min-width: $screen-md-min) {
	.side,
	.side * {
		z-index: auto;
	}

	.side {
		width: 330px;
		margin-right: 64px;

		// hide kebab menu icon
		&:before { display: none; }

		&:hover .spacer { @include transform(none); }
	}
}

